--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-slate
 title: test-page-v1
 description: literally nothing on this page, its amazing 10/10
+image: ("http://mrseang.me/wp-content/uploads/2015/09/AFSE-brand-2_Page_1.png")
